# uts-data-ingest-library

./: .gitignore  README.md  main.py  mise.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test+build.yaml
src/cow_calculator_lib/: __init__.py
tests/: test_calculator.py
