[project]
name = "cow_calculator_lib"
version = "0.1.0"
description = "A basic calculator library with cows"
readme = "README.md"
authors = [
    { name = "person 1", email = "person1@email.com" },
    { name = "person 2", email = "person2@email.com" },
    { name = "person 3", email = "person3@email.com" },
    { name = "person 4", email = "person4@email.com" },
    { name = "person 5", email = "person5@email.com" },
    { name = "person 6", email = "person6@email.com" },
    { name = "person 7", email = "person7@email.com" },
]
requires-python = ">=3.12"
dependencies = ["cowsay", "pylibtiff"]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2"]
